feat: Adding user features
