# backend/users/controller.go
@@ -28,7 +28,6 @@ func New(s interfaces.Service) *Controller {
 // @Router /users [post]
 func (c *Controller) Create(ctx *gin.Context) {
 	var req models.CreateUserRequest
-	println("comecei")
 	if err := ctx.ShouldBindJSON(&req); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -45,9 +44,90 @@ func (c *Controller) Create(ctx *gin.Context) {
 	})
 }
 
-func (c *Controller) RegisterRoutes(r *gin.Engine) {
+// GetUserByID godoc
+// @Summary Get user by ID
+// @Tags users
+// @Produce json
+// @Param id path string true "User ID"
+// @Success 200 {object} models.User
+// @Router /users/{id} [get]
+func (c *Controller) FindByID(ctx *gin.Context) {
 
+	id := ctx.Param("id")
+
+	user, err := c.service.Find(ctx.Request.Context(), id)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	if user == nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, user)
+}
+
+// DeleteUser godoc
+// @Summary Delete user
+// @Tags users
+// @Param id path string true "User ID"
+// @Success 204
+// @Router /users/{id} [delete]
+func (c *Controller) Delete(ctx *gin.Context) {
+
+	id := ctx.Param("id")
+
+	err := c.service.Delete(ctx.Request.Context(), id)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	ctx.Status(http.StatusNoContent)
+}
+
+// UpdateUser godoc
+// @Summary Update user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param id path string true "User ID"
+// @Param user body models.CreateUserRequest true "User payload"
+// @Success 200 {object} models.User
+// @Router /users/{id} [put]
+func (c *Controller) Update(ctx *gin.Context) {
+
+	id := ctx.Param("id")
+
+	var req models.CreateUserRequest
+
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	user, err := c.service.Find(ctx.Request.Context(), id)
+	if err != nil || user == nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
+		return
+	}
+
+	newUser, err := c.service.Update(ctx.Request.Context(), &req)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, newUser)
+}
+
+func (c *Controller) RegisterRoutes(r *gin.Engine) {
 	group := r.Group("/users")
 
 	group.POST("", c.Create)
+	group.GET("/:id", c.FindByID)
+	group.PUT("/:id", c.Update)
+	group.DELETE("/:id", c.Delete)
 }
